regenerate the project